Fix some styles

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,11 @@
     <script nomodule type=text/javascript>
       document.body.innerHTML = "Please use modern browser. (I checked to work only latest chrome)"
     </script>
+    <style>
+      ::selection {
+        background: #f64df9;
+      }
+    </style>
     <script type='text/javascript' src='/assets/browserfs.min.js'></script>
     <script type='module'>
 const el = document.querySelector('.root')
