--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
       document.body.innerHTML = "Please use modern browser. (I checked to work only latest chrome)"
     </script>
     <style>
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+      }
       ::selection {
         background: #f64df9;
       }
@@ -85,13 +88,9 @@ async function setupServiceWorker() {
 }
 
 async function loadFonts () {
-  const poppins = new FontFace('poppins', 'url(/assets/fonts/Poppins.ttf')
   const mono = new FontFace('mono', 'url(/assets/fonts/RobotoMono.ttf')
-  const loadedPoppins = await poppins.load()
   const loadedMono = await mono.load()
-  document.fonts.add(loadedPoppins)
   document.fonts.add(loadedMono)
-  document.body.style.fontFamily = 'poppins'
 }
 
 const showLoadingMessage = (mes, loading = true) => {
