--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang='ja'>
   <head>
+    <link rel='manifest' href='/assets/manifest.webmanifest'>
     <title>Rapunzel Editor</title>
     <meta charset='utf8'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
