Add Netlify link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
         <h2>Links</h2>
         <ul>
           <li>
-            <a href="https://github.com/sosukesuzuki/rapunze-editor">GitHub</a>
+            <a href="https://relaxed-benz-e7d524.netlify.com/">Try on Netlify</a>
+          </li>
+          <li>
+            <a href="https://github.com/sosukesuzuki/rapunzel-editor">GitHub</a>
           </li>
           <li>
             <a href="https://sosukesuzuki.github.io">Author(sosukesuzuki)</a>
