Fix Marked => Remark

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               </tr>
               <tr>
                 <td>Library</td>
-                <td>React, MobX, CodeMirror, Browserfs, Marked, office-ui-fabric</td>
+                <td>React, MobX, CodeMirror, Browserfs, Remark, office-ui-fabric</td>
               </tr>
               <tr>
                 <td>Bundler</td>
